# django-better-choices

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  codecov.yml  pyproject.toml  setup.py  tests.py
.github/workflows/: ci.yml
better_choices/: __init__.py
django_better_choices/: __init__.py  version.py
src/django_better_choices/: __init__.py
tests/: test_choices.py
